PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Begin work on distribution-specific dynamic dependency handler infrastructure
- phoromatic: Allow public listing of download cache files when navigating in browser to /download-cache.php
- phodevi: Assume Windows is 64-bit when environment variable check fails

Phoronix Test Suite 6.0.1
20 November 2015

- phodevi: Fix potential errors in sensors

Phoronix Test Suite 6.0-Hammerfest
16 November 2015

- pts-core: Stop logging lsusb as on some systems calling the command will hang
- pts-core: Move common dependencies later in the external dependency handling process
- pts_Graph: Fix multi-way comparison line graphs from color collision
- phodevi: NVIDIA Jetson TX1 GPU thermal monitoring support and likely will work for some other boards too

Phoronix Test Suite 6.0 Milestone 6
12 November 2015

- pts-core: Windows updates
- pts-core: Random fixes
- pts-core / phodevi: Merge the complete system sensors rework: https://github.com/phoronix-test-suite/phoronix-test-suite/pull/92
- pts-core: pts_openbenchmarking::available_tests() don't show deprecated test profiles by default
- phodevi: Support reporting /sys/firmware/devicetree/base/model for part of motherboard/SBC string
- phoromatic: Final styling for hammerfest

Phoronix Test Suite 6.0 Milestone 5
4 November 2015

- pts-core: Rewrite of the local results viewer, now use HTML+JS rather than XSL
- pts-core: Fix finish-run command functionality
- pts-core: Fix results getting compacted into single result comparison object when using a local test without version post-fix
- pts-core: Fix CSV result output when there are missing results
- pts-core: Properly handle spaces in shell_exec() export
- pts-core: Other small fixes
- phodevi: Support for finding the Xorg.0.log in ~/.local/share/xorg/ with Debian now using that for non-root X Server
- phoromatic: Tweaks
- documentation: Update HTML template style

Phoronix Test Suite 6.0 Milestone 4